2008-07-04  Martyn Russell  <martyn@imendio.com>


	* src/tracker-indexer/modules/files.c: Fixed warning.
	
	* src/libtracker-common/tracker-config.[ch]:
	* src/tracker-indexer/tracker-main.c:
	(sanity_check_option_values): Removed config options we now no
	longer have, "OptimizationSweepCount", "Divisions",
	"BucketRatio" and  "Padding".

2008-07-04  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/modules/evolution.c: Avoid a crash in case the
	url string of a Evolution account is empty.

2008-07-04  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-log.c: If we can't open the log,
	add a "\n" to the error so we don't get 2 messages on the same
	line. 
	
	* src/trackerd/tracker-crawler.c: Make sure we set module_name to
	NULL when getting the next queue with data and recheck the next
	queue in the running callback in case things have changed.

2008-07-03  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c (tracker_indexer_files_check)
	(tracker_indexer_files_update) (tracker_indexer_files_delete): Return
	module name in case of error.

2008-07-03  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: Make sure we have a queue PER
	module name, this way we don't get the "module not loaded" error
	when we stop crawling one module and start another (cause we were
	freeing the priv->module_name and the queues are handled AFTER
	crawling has stopped). 

2008-07-03  Ivan Frade  <ivan.frade@nokia.com>
	
	* src/libtracker-common/tracker-nfs-lock.c: using username instead
	of PID to the nfs lock filename.
	
	* src/trackerd/tracker-main.c: Updated code to handle multiple 
	instances.
		
2008-07-03  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-config.c: Don't set the
	LowMemoryMode to True by default!

2008-07-03  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-config.[ch]: Removed
	ThreadStackSize since it is no longer used.
	